kubernetes-dashboard-proxy/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-dashboard-proxy
  namespace: kubernetes-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      serviceAccountName: ns-access-sa
      containers:
      - name: proxy
        image: <image>
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-svc
  namespace: kubernetes-dashboard
spec:
  selector:
    app: proxy
  ports:
  - port: 80
    targetPort: 80
