kubernetes-dashboard-proxy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-api-rewrite
  namespace: kubernetes-dashboard
spec:
  replacePathRegex:
    regex: ^/api/v1/namespace(.*)
    replacement: /$1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-api-redirect
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kubernetes-dashboard-dashboard-api-rewrite@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: dashboard.local
    http:
      paths:
      - path: /api/v1/namespace
        pathType: Prefix
        backend:
          service:
            name: proxy-svc
            port:
              number: 8080
  tls:
  - hosts:
    - dashboard.local
